# serializer version: 1
# name: TestSessionsV3.test_bounce_rate
  '''
  SELECT sessions.`$is_bounce` AS `$is_bounce`,
         sessions.session_id AS session_id
  FROM
    (SELECT if(equals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 0), NULL, not(or(greaterOrEquals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 2), max(raw_sessions_v3.has_autocapture), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))), 10)))) AS `$is_bounce`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE equals(raw_sessions_v3.team_id, 99999)
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  ORDER BY sessions.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_can_use_v1_and_v2_fields
  '''
  SELECT sessions.`$session_duration` AS `$session_duration`,
         sessions.duration AS duration,
         sessions.`$end_current_url` AS `$end_current_url`,
         sessions.`$exit_current_url` AS `$exit_current_url`,
         sessions.`$end_pathname` AS `$end_pathname`,
         sessions.`$exit_pathname` AS `$exit_pathname`
  FROM
    (SELECT dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))) AS `$session_duration`,
            dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))) AS duration,
            argMaxMerge(raw_sessions_v3.end_url) AS `$end_current_url`,
            argMaxMerge(raw_sessions_v3.end_url) AS `$exit_current_url`,
            path(argMaxMerge(raw_sessions_v3.end_url)) AS `$end_pathname`,
            path(argMaxMerge(raw_sessions_v3.end_url)) AS `$exit_pathname`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))))
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  WHERE equals(sessions.session_id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_channel_type
  '''
  SELECT sessions.`$channel_type` AS `$channel_type`
  FROM
    (SELECT multiIf(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), 'cross-network'), 'Cross Network', or(in(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), tuple('cpc', 'cpm', 'cpv', 'cpa', 'ppc', 'retargeting')), startsWith(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), 'paid'), tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 5), isNotNull(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 7), ''), 'null'))), coalesce(coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (cutToFirstSignificantSubdomain(coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), '')), 'source'))), if(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*(([^a-df-z]|^)shop|shopping).*)$'), 'Paid Shopping', NULL), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), ''), 'medium')), coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (cutToFirstSignificantSubdomain(coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '')), 'source'))), multiIf(ifNull(equals(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 7), ''), 'null'), '1'), 0), 'Paid Search', match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*video.*)$'), 'Paid Video', tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6), 'Paid Social', 'Paid Unknown')), and(ifNull(equals(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '$direct'), 0), isNull(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null'))), or(isNull(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null'))), in(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), tuple('(direct)', 'direct', '$direct'))), not(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6))), 'Direct', coalesce(coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (cutToFirstSignificantSubdomain(coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), '')), 'source'))), if(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*(([^a-df-z]|^)shop|shopping).*)$'), 'Organic Shopping', NULL), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), ''), 'medium')), coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (cutToFirstSignificantSubdomain(coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '')), 'source'))), multiIf(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*video.*)$'), 'Organic Video', match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), 'push$'), 'Push', tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6), 'Organic Social', ifNull(equals(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '$direct'), 0), 'Direct', isNotNull(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4)), 'Referral', 'Unknown'))) AS `$channel_type`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))))
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  WHERE equals(sessions.session_id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_counts
  '''
  SELECT sessions.`$pageview_count` AS `$pageview_count`,
         sessions.`$autocapture_count` AS `$autocapture_count`,
         sessions.`$screen_count` AS `$screen_count`
  FROM
    (SELECT uniqMerge(raw_sessions_v3.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions_v3.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions_v3.screen_uniq) AS `$screen_count`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))))
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  WHERE equals(sessions.id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_custom_bounce_rate_duration
  '''
  SELECT sessions.`$is_bounce` AS `$is_bounce`,
         sessions.session_id AS session_id
  FROM
    (SELECT if(equals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 0), NULL, not(or(greaterOrEquals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 2), max(raw_sessions_v3.has_autocapture), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))), 10)))) AS `$is_bounce`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE equals(raw_sessions_v3.team_id, 99999)
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  ORDER BY sessions.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_custom_bounce_rate_duration.1
  '''
  SELECT sessions.`$is_bounce` AS `$is_bounce`,
         sessions.session_id AS session_id
  FROM
    (SELECT if(equals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 0), NULL, not(or(greaterOrEquals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 2), max(raw_sessions_v3.has_autocapture), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))), 10.0)))) AS `$is_bounce`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE equals(raw_sessions_v3.team_id, 99999)
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  ORDER BY sessions.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_custom_bounce_rate_duration.2
  '''
  SELECT sessions.`$is_bounce` AS `$is_bounce`,
         sessions.session_id AS session_id
  FROM
    (SELECT if(equals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 0), NULL, not(or(greaterOrEquals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 2), max(raw_sessions_v3.has_autocapture), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))), 30.0)))) AS `$is_bounce`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE equals(raw_sessions_v3.team_id, 99999)
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  ORDER BY sessions.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_empty_counts
  '''
  SELECT sessions.`$pageview_count` AS `$pageview_count`,
         sessions.`$autocapture_count` AS `$autocapture_count`,
         sessions.`$screen_count` AS `$screen_count`
  FROM
    (SELECT uniqMerge(raw_sessions_v3.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions_v3.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions_v3.screen_uniq) AS `$screen_count`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))))
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  WHERE equals(sessions.id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_event_sessions_where
  '''
  SELECT count() AS `count()`
  FROM events
  LEFT JOIN
    (SELECT path(argMinMerge(raw_sessions_v3.entry_url)) AS `$entry_pathname`,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE equals(raw_sessions_v3.team_id, 99999)
     GROUP BY raw_sessions_v3.session_id_v7) AS events__session ON equals(events.`$session_id_uuid`, events__session.session_id_v7)
  WHERE and(equals(events.team_id, 99999), equals(events__session.`$entry_pathname`, '/pathname'))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_event_sessions_where_event_timestamp
  '''
  SELECT events__session.id AS session_id
  FROM events
  LEFT JOIN
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))), greaterOrEquals(raw_sessions_v3.session_timestamp, minus('1970-01-01', toIntervalDay(3))))
     GROUP BY raw_sessions_v3.session_id_v7) AS events__session ON equals(events.`$session_id_uuid`, events__session.session_id_v7)
  WHERE and(equals(events.team_id, 99999), equals(session_id, '00000000-0000-0000-0000-000000000000'), greaterOrEquals(events.timestamp, toDateTime64('1970-01-01', 6, 'UTC')))
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_idempotent_event_counts
  '''
  SELECT sessions.`$pageview_count` AS `$pageview_count`,
         sessions.`$autocapture_count` AS `$autocapture_count`,
         sessions.`$screen_count` AS `$screen_count`
  FROM
    (SELECT uniqMerge(raw_sessions_v3.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions_v3.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions_v3.screen_uniq) AS `$screen_count`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))))
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  WHERE equals(sessions.id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_last_external_click_url
  '''
  SELECT sessions.`$last_external_click_url` AS `$last_external_click_url`
  FROM
    (SELECT argMaxMerge(raw_sessions_v3.last_external_click_url) AS `$last_external_click_url`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))))
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  WHERE equals(sessions.session_id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_page_screen_autocapture_count_up_to
  '''
  SELECT sessions.`$page_screen_count_up_to` AS `$page_screen_count_up_to`,
         sessions.`$has_autocapture` AS `$has_autocapture`
  FROM
    (SELECT uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to) AS `$page_screen_count_up_to`,
            max(raw_sessions_v3.has_autocapture) AS `$has_autocapture`,
            toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE equals(raw_sessions_v3.team_id, 99999)
     GROUP BY raw_sessions_v3.session_id_v7) AS sessions
  ORDER BY sessions.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_persons_and_sessions_on_events
  '''
  SELECT if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id) AS person_id,
         events__session.`$entry_utm_source` AS `$entry_utm_source`
  FROM events
  LEFT JOIN
    (SELECT argMinMerge(raw_sessions_v3.entry_utm_source) AS `$entry_utm_source`,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), or(equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80))))))
     GROUP BY raw_sessions_v3.session_id_v7) AS events__session ON equals(events.`$session_id_uuid`, events__session.session_id_v7)
  LEFT OUTER JOIN
    (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
            person_distinct_id_overrides.distinct_id AS distinct_id
     FROM person_distinct_id_overrides
     WHERE equals(person_distinct_id_overrides.team_id, 99999)
     GROUP BY person_distinct_id_overrides.distinct_id
     HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id)
  WHERE and(equals(events.team_id, 99999), or(equals(events.`$session_id_uuid`, toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID'))), equals(events.`$session_id_uuid`, toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')))))
  ORDER BY 2 ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_select_session_replay_session_duration
  '''
  SELECT raw_session_replay_events__session.duration AS duration
  FROM session_replay_events
  LEFT JOIN
    (SELECT dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))) AS duration,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE equals(raw_sessions_v3.team_id, 99999)
     GROUP BY raw_sessions_v3.session_id_v7) AS raw_session_replay_events__session ON equals(toUInt128(accurateCastOrNull(session_replay_events.session_id, 'UUID')), raw_session_replay_events__session.session_id_v7)
  WHERE equals(session_replay_events.team_id, 99999)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_select_star_from_raw_sessions
  '''
  SELECT toTimeZone(raw_sessions_v3.min_timestamp, 'UTC') AS min_timestamp,
         toTimeZone(raw_sessions_v3.max_timestamp, 'UTC') AS max_timestamp,
         toTimeZone(raw_sessions_v3.max_inserted_at, 'UTC') AS max_inserted_at,
         raw_sessions_v3.urls AS urls,
         raw_sessions_v3.has_autocapture AS has_autocapture,
         raw_sessions_v3.hosts AS hosts,
         raw_sessions_v3.emails AS emails,
         raw_sessions_v3.has_replay_events AS has_replay_events
  FROM raw_sessions_v3
  WHERE equals(raw_sessions_v3.team_id, 99999)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_select_star_from_sessions
  '''
  SELECT sessions.session_id AS session_id,
         sessions.session_timestamp AS session_timestamp,
         sessions.distinct_id AS distinct_id,
         sessions.`$start_timestamp` AS `$start_timestamp`,
         sessions.`$end_timestamp` AS `$end_timestamp`,
         sessions.max_inserted_at AS max_inserted_at,
         sessions.`$urls` AS `$urls`,
         sessions.`$num_uniq_urls` AS `$num_uniq_urls`,
         sessions.`$entry_current_url` AS `$entry_current_url`,
         sessions.`$entry_pathname` AS `$entry_pathname`,
         sessions.`$entry_hostname` AS `$entry_hostname`,
         sessions.`$end_current_url` AS `$end_current_url`,
         sessions.`$end_pathname` AS `$end_pathname`,
         sessions.`$end_hostname` AS `$end_hostname`,
         sessions.`$entry_referring_domain` AS `$entry_referring_domain`,
         sessions.`$last_external_click_url` AS `$last_external_click_url`,
         sessions.`$entry_utm_source` AS `$entry_utm_source`,
         sessions.`$entry_utm_campaign` AS `$entry_utm_campaign`,
         sessions.`$entry_utm_medium` AS `$entry_utm_medium`,
         sessions.`$entry_utm_term` AS `$entry_utm_term`,
         sessions.`$entry_utm_content` AS `$entry_utm_content`,
         sessions.`$entry_fbclid` AS `$entry_fbclid`,
         sessions.`$entry_has_fbclid` AS `$entry_has_fbclid`,
         sessions.`$entry_has_gclid` AS `$entry_has_gclid`,
         sessions.`$pageview_count` AS `$pageview_count`,
         sessions.`$autocapture_count` AS `$autocapture_count`,
         sessions.`$screen_count` AS `$screen_count`,
         sessions.`$channel_type` AS `$channel_type`,
         sessions.`$session_duration` AS `$session_duration`,
         sessions.`$is_bounce` AS `$is_bounce`,
         sessions.`$hosts` AS `$hosts`,
         sessions.`$emails` AS `$emails`,
         sessions.`$has_replay_events` AS `$has_replay_events`,
         sessions.`$entry_gclsrc` AS `$entry_gclsrc`,
         sessions.`$entry_has_gclsrc` AS `$entry_has_gclsrc`,
         sessions.`$entry_dclid` AS `$entry_dclid`,
         sessions.`$entry_has_dclid` AS `$entry_has_dclid`,
         sessions.`$entry_gbraid` AS `$entry_gbraid`,
         sessions.`$entry_has_gbraid` AS `$entry_has_gbraid`,
         sessions.`$entry_wbraid` AS `$entry_wbraid`,
         sessions.`$entry_has_wbraid` AS `$entry_has_wbraid`,
         sessions.`$entry_gad_campaignid` AS `$entry_gad_campaignid`,
         sessions.`$entry_has_gad_campaignid` AS `$entry_has_gad_campaignid`,
         sessions.`$entry_srsltid` AS `$entry_srsltid`,
         sessions.`$entry_has_srsltid` AS `$entry_has_srsltid`,
         sessions.`$entry_msclkid` AS `$entry_msclkid`,
         sessions.`$entry_has_msclkid` AS `$entry_has_msclkid`,
         sessions.`$entry_twclid` AS `$entry_twclid`,
         sessions.`$entry_has_twclid` AS `$entry_has_twclid`,
         sessions.`$entry_li_fat_id` AS `$entry_li_fat_id`,
         sessions.`$entry_has_li_fat_id` AS `$entry_has_li_fat_id`,
         sessions.`$entry_mc_cid` AS `$entry_mc_cid`,
         sessions.`$entry_has_mc_cid` AS `$entry_has_mc_cid`,
         sessions.`$entry_igshid` AS `$entry_igshid`,
         sessions.`$entry_has_igshid` AS `$entry_has_igshid`,
         sessions.`$entry_ttclid` AS `$entry_ttclid`,
         sessions.`$entry_has_ttclid` AS `$entry_has_ttclid`,
         sessions.`$entry_rdt_cid` AS `$entry_rdt_cid`,
         sessions.`$entry_has_rdt_cid` AS `$entry_has_rdt_cid`,
         sessions.`$entry_epik` AS `$entry_epik`,
         sessions.`$entry_has_epik` AS `$entry_has_epik`,
         sessions.`$entry_qclid` AS `$entry_qclid`,
         sessions.`$entry_has_qclid` AS `$entry_has_qclid`,
         sessions.`$entry_sccid` AS `$entry_sccid`,
         sessions.`$entry_has_sccid` AS `$entry_has_sccid`,
         sessions.`$entry__kx` AS `$entry__kx`,
         sessions.`$entry_has__kx` AS `$entry_has__kx`,
         sessions.`$entry_irclid` AS `$entry_irclid`,
         sessions.`$entry_has_irclid` AS `$entry_has_irclid`,
         sessions.`$entry_irclickid` AS `$entry_irclickid`,
         sessions.`$entry_has_irclickid` AS `$entry_has_irclickid`,
         sessions.`$entry_utm_id` AS `$entry_utm_id`,
         sessions.`$entry_has_utm_id` AS `$entry_has_utm_id`,
         sessions.`$entry_utm_source_platform` AS `$entry_utm_source_platform`,
         sessions.`$entry_has_utm_source_platform` AS `$entry_has_utm_source_platform`,
         sessions.`$entry_utm_creative_format` AS `$entry_utm_creative_format`,
         sessions.`$entry_has_utm_creative_format` AS `$entry_has_utm_creative_format`,
         sessions.`$entry_utm_marketing_tactic` AS `$entry_utm_marketing_tactic`,
         sessions.`$entry_has_utm_marketing_tactic` AS `$entry_has_utm_marketing_tactic`,
         sessions.`$entry_yclid` AS `$entry_yclid`,
         sessions.`$entry_has_yclid` AS `$entry_has_yclid`,
         sessions.`$entry_tblci` AS `$entry_tblci`,
         sessions.`$entry_has_tblci` AS `$entry_has_tblci`,
         sessions.`$entry_dicbo` AS `$entry_dicbo`,
         sessions.`$entry_has_dicbo` AS `$entry_has_dicbo`,
         sessions.`$entry_ndclid` AS `$entry_ndclid`,
         sessions.`$entry_has_ndclid` AS `$entry_has_ndclid`,
         sessions.`$entry_cjevent` AS `$entry_cjevent`,
         sessions.`$entry_has_cjevent` AS `$entry_has_cjevent`,
         sessions.`$entry_awc` AS `$entry_awc`,
         sessions.`$entry_has_awc` AS `$entry_has_awc`,
         sessions.`$entry_syclid` AS `$entry_syclid`,
         sessions.`$entry_has_syclid` AS `$entry_has_syclid`,
         sessions.`$entry__bhlid` AS `$entry__bhlid`,
         sessions.`$entry_has__bhlid` AS `$entry_has__bhlid`,
         sessions.`$entry_rtid` AS `$entry_rtid`,
         sessions.`$entry_has_rtid` AS `$entry_has_rtid`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
            raw_sessions_v3.session_timestamp AS session_timestamp,
            argMaxMerge(raw_sessions_v3.distinct_id) AS distinct_id,
            min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC')) AS `$end_timestamp`,
            max(toTimeZone(raw_sessions_v3.max_inserted_at, 'UTC')) AS max_inserted_at,
            arrayDistinct(arrayFlatten(groupArray(raw_sessions_v3.urls))) AS `$urls`,
            length(arrayDistinct(arrayFlatten(groupArray(raw_sessions_v3.urls)))) AS `$num_uniq_urls`,
            argMinMerge(raw_sessions_v3.entry_url) AS `$entry_current_url`,
            path(argMinMerge(raw_sessions_v3.entry_url)) AS `$entry_pathname`,
            domain(argMinMerge(raw_sessions_v3.entry_url)) AS `$entry_hostname`,
            argMaxMerge(raw_sessions_v3.end_url) AS `$end_current_url`,
            path(argMaxMerge(raw_sessions_v3.end_url)) AS `$end_pathname`,
            domain(argMaxMerge(raw_sessions_v3.end_url)) AS `$end_hostname`,
            argMinMerge(raw_sessions_v3.entry_referring_domain) AS `$entry_referring_domain`,
            argMaxMerge(raw_sessions_v3.last_external_click_url) AS `$last_external_click_url`,
            argMinMerge(raw_sessions_v3.entry_utm_source) AS `$entry_utm_source`,
            argMinMerge(raw_sessions_v3.entry_utm_campaign) AS `$entry_utm_campaign`,
            argMinMerge(raw_sessions_v3.entry_utm_medium) AS `$entry_utm_medium`,
            argMinMerge(raw_sessions_v3.entry_utm_term) AS `$entry_utm_term`,
            argMinMerge(raw_sessions_v3.entry_utm_content) AS `$entry_utm_content`,
            argMinMerge(raw_sessions_v3.entry_fbclid) AS `$entry_fbclid`,
            argMinMerge(raw_sessions_v3.entry_has_fbclid) AS `$entry_has_fbclid`,
            argMinMerge(raw_sessions_v3.entry_has_gclid) AS `$entry_has_gclid`,
            uniqMerge(raw_sessions_v3.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions_v3.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions_v3.screen_uniq) AS `$screen_count`,
            multiIf(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), 'cross-network'), 'Cross Network', or(in(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), tuple('cpc', 'cpm', 'cpv', 'cpa', 'ppc', 'retargeting')), startsWith(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), 'paid'), tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 5), isNotNull(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 7), ''), 'null'))), coalesce(coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (cutToFirstSignificantSubdomain(coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), '')), 'source'))), if(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*(([^a-df-z]|^)shop|shopping).*)$'), 'Paid Shopping', NULL), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), ''), 'medium')), coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (cutToFirstSignificantSubdomain(coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '')), 'source'))), multiIf(ifNull(equals(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 7), ''), 'null'), '1'), 0), 'Paid Search', match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*video.*)$'), 'Paid Video', tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6), 'Paid Social', 'Paid Unknown')), and(ifNull(equals(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '$direct'), 0), isNull(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null'))), or(isNull(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null'))), in(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), tuple('(direct)', 'direct', '$direct'))), not(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6))), 'Direct', coalesce(coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (cutToFirstSignificantSubdomain(coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), '')), 'source'))), if(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*(([^a-df-z]|^)shop|shopping).*)$'), 'Organic Shopping', NULL), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), ''), 'medium')), coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (cutToFirstSignificantSubdomain(coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '')), 'source'))), multiIf(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*video.*)$'), 'Organic Video', match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), 'push$'), 'Push', tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6), 'Organic Social', ifNull(equals(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '$direct'), 0), 'Direct', isNotNull(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4)), 'Referral', 'Unknown'))) AS `$channel_type`,
            dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))) AS `$session_duration`,
            if(equals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 0), NULL, not(or(greaterOrEquals(uniqUpToMerge(1)(raw_sessions_v3.page_screen_uniq_up_to), 2), max(raw_sessions_v3.has_autocapture), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions_v3.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions_v3.max_timestamp, 'UTC'))), 10)))) AS `$is_bounce`,
            arrayDistinct(arrayFlatten(groupArray(raw_sessions_v3.hosts))) AS `$hosts`,
            arrayDistinct(arrayFlatten(groupArray(raw_sessions_v3.emails))) AS `$emails`,
            max(raw_sessions_v3.has_replay_events) AS `$has_replay_events`,
            replaceOne(arrayFirst(x -> startsWith(x, 'gclsrc='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'gclsrc=', '') AS `$entry_gclsrc`,
            arrayExists(x -> startsWith(x, 'gclsrc='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_gclsrc`,
            replaceOne(arrayFirst(x -> startsWith(x, 'dclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'dclid=', '') AS `$entry_dclid`,
            arrayExists(x -> startsWith(x, 'dclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_dclid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'gbraid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'gbraid=', '') AS `$entry_gbraid`,
            arrayExists(x -> startsWith(x, 'gbraid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_gbraid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'wbraid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'wbraid=', '') AS `$entry_wbraid`,
            arrayExists(x -> startsWith(x, 'wbraid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_wbraid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'gad_campaignid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'gad_campaignid=', '') AS `$entry_gad_campaignid`,
            arrayExists(x -> startsWith(x, 'gad_campaignid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_gad_campaignid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'srsltid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'srsltid=', '') AS `$entry_srsltid`,
            arrayExists(x -> startsWith(x, 'srsltid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_srsltid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'msclkid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'msclkid=', '') AS `$entry_msclkid`,
            arrayExists(x -> startsWith(x, 'msclkid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_msclkid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'twclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'twclid=', '') AS `$entry_twclid`,
            arrayExists(x -> startsWith(x, 'twclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_twclid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'li_fat_id='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'li_fat_id=', '') AS `$entry_li_fat_id`,
            arrayExists(x -> startsWith(x, 'li_fat_id='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_li_fat_id`,
            replaceOne(arrayFirst(x -> startsWith(x, 'mc_cid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'mc_cid=', '') AS `$entry_mc_cid`,
            arrayExists(x -> startsWith(x, 'mc_cid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_mc_cid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'igshid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'igshid=', '') AS `$entry_igshid`,
            arrayExists(x -> startsWith(x, 'igshid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_igshid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'ttclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'ttclid=', '') AS `$entry_ttclid`,
            arrayExists(x -> startsWith(x, 'ttclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_ttclid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'rdt_cid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'rdt_cid=', '') AS `$entry_rdt_cid`,
            arrayExists(x -> startsWith(x, 'rdt_cid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_rdt_cid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'epik='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'epik=', '') AS `$entry_epik`,
            arrayExists(x -> startsWith(x, 'epik='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_epik`,
            replaceOne(arrayFirst(x -> startsWith(x, 'qclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'qclid=', '') AS `$entry_qclid`,
            arrayExists(x -> startsWith(x, 'qclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_qclid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'sccid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'sccid=', '') AS `$entry_sccid`,
            arrayExists(x -> startsWith(x, 'sccid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_sccid`,
            replaceOne(arrayFirst(x -> startsWith(x, '_kx='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), '_kx=', '') AS `$entry__kx`,
            arrayExists(x -> startsWith(x, '_kx='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has__kx`,
            replaceOne(arrayFirst(x -> startsWith(x, 'irclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'irclid=', '') AS `$entry_irclid`,
            arrayExists(x -> startsWith(x, 'irclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_irclid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'irclickid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'irclickid=', '') AS `$entry_irclickid`,
            arrayExists(x -> startsWith(x, 'irclickid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_irclickid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'utm_id='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'utm_id=', '') AS `$entry_utm_id`,
            arrayExists(x -> startsWith(x, 'utm_id='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_utm_id`,
            replaceOne(arrayFirst(x -> startsWith(x, 'utm_source_platform='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'utm_source_platform=', '') AS `$entry_utm_source_platform`,
            arrayExists(x -> startsWith(x, 'utm_source_platform='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_utm_source_platform`,
            replaceOne(arrayFirst(x -> startsWith(x, 'utm_creative_format='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'utm_creative_format=', '') AS `$entry_utm_creative_format`,
            arrayExists(x -> startsWith(x, 'utm_creative_format='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_utm_creative_format`,
            replaceOne(arrayFirst(x -> startsWith(x, 'utm_marketing_tactic='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'utm_marketing_tactic=', '') AS `$entry_utm_marketing_tactic`,
            arrayExists(x -> startsWith(x, 'utm_marketing_tactic='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_utm_marketing_tactic`,
            replaceOne(arrayFirst(x -> startsWith(x, 'yclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'yclid=', '') AS `$entry_yclid`,
            arrayExists(x -> startsWith(x, 'yclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_yclid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'tblci='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'tblci=', '') AS `$entry_tblci`,
            arrayExists(x -> startsWith(x, 'tblci='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_tblci`,
            replaceOne(arrayFirst(x -> startsWith(x, 'dicbo='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'dicbo=', '') AS `$entry_dicbo`,
            arrayExists(x -> startsWith(x, 'dicbo='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_dicbo`,
            replaceOne(arrayFirst(x -> startsWith(x, 'ndclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'ndclid=', '') AS `$entry_ndclid`,
            arrayExists(x -> startsWith(x, 'ndclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_ndclid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'cjevent='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'cjevent=', '') AS `$entry_cjevent`,
            arrayExists(x -> startsWith(x, 'cjevent='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_cjevent`,
            replaceOne(arrayFirst(x -> startsWith(x, 'awc='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'awc=', '') AS `$entry_awc`,
            arrayExists(x -> startsWith(x, 'awc='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_awc`,
            replaceOne(arrayFirst(x -> startsWith(x, 'syclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'syclid=', '') AS `$entry_syclid`,
            arrayExists(x -> startsWith(x, 'syclid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_syclid`,
            replaceOne(arrayFirst(x -> startsWith(x, '_bhlid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), '_bhlid=', '') AS `$entry__bhlid`,
            arrayExists(x -> startsWith(x, '_bhlid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has__bhlid`,
            replaceOne(arrayFirst(x -> startsWith(x, 'rtid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)), 'rtid=', '') AS `$entry_rtid`,
            arrayExists(x -> startsWith(x, 'rtid='), argMinMerge(raw_sessions_v3.entry_ad_ids_set)) AS `$entry_has_rtid`,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))))
     GROUP BY raw_sessions_v3.session_timestamp,
              raw_sessions_v3.session_id_v7) AS sessions
  WHERE equals(sessions.session_id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSessionsV3.test_session_dot_channel_type
  '''
  SELECT events__session.`$channel_type` AS `$channel_type`
  FROM
    (SELECT events.`$session_id_uuid` AS `$session_id_uuid`
     FROM events
     WHERE and(equals(events.team_id, 99999), equals(events.`$session_id_uuid`, toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID'))))
     LIMIT 100) AS events
  LEFT JOIN
    (SELECT multiIf(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), 'cross-network'), 'Cross Network', or(in(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), tuple('cpc', 'cpm', 'cpv', 'cpa', 'ppc', 'retargeting')), startsWith(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), 'paid'), tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 5), isNotNull(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 7), ''), 'null'))), coalesce(coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (cutToFirstSignificantSubdomain(coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), '')), 'source'))), if(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*(([^a-df-z]|^)shop|shopping).*)$'), 'Paid Shopping', NULL), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), ''), 'medium')), coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_paid', (cutToFirstSignificantSubdomain(coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '')), 'source'))), multiIf(ifNull(equals(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 7), ''), 'null'), '1'), 0), 'Paid Search', match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*video.*)$'), 'Paid Video', tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6), 'Paid Social', 'Paid Unknown')), and(ifNull(equals(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '$direct'), 0), isNull(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null'))), or(isNull(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null'))), in(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), tuple('(direct)', 'direct', '$direct'))), not(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6))), 'Direct', coalesce(coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (cutToFirstSignificantSubdomain(coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 1), ''), 'null')), '')), 'source'))), if(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*(([^a-df-z]|^)shop|shopping).*)$'), 'Organic Shopping', NULL), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), ''), 'medium')), coalesce(dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), ''), 'source')), dictGetOrNull('posthog_test.channel_definition_dict', 'type_if_organic', (cutToFirstSignificantSubdomain(coalesce(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '')), 'source'))), multiIf(match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 3), ''), 'null')), '^(.*video.*)$'), 'Organic Video', match(lower(nullIf(nullIf(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 2), ''), 'null')), 'push$'), 'Push', tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 6), 'Organic Social', ifNull(equals(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4), '$direct'), 0), 'Direct', isNotNull(tupleElement(argMinMerge(raw_sessions_v3.entry_channel_type_properties), 4)), 'Referral', 'Unknown'))) AS `$channel_type`,
            raw_sessions_v3.session_id_v7 AS session_id_v7
     FROM raw_sessions_v3
     WHERE and(equals(raw_sessions_v3.team_id, 99999), equals(raw_sessions_v3.session_timestamp, fromUnixTimestamp64Milli(toUInt64(bitShiftRight(toUInt128(accurateCastOrNull('00000000-0000-0000-0000-000000000000', 'UUID')), 80)))))
     GROUP BY raw_sessions_v3.session_id_v7) AS events__session ON equals(events.`$session_id_uuid`, events__session.session_id_v7)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
